crates/vox-codegen/tests/snapshots/golden_ts_test__golden_ts_emit@form_basic.snap
---
source: crates/vox-codegen/tests/golden_ts_test.rs
expression: combined
---
=== forms.tsx ===
// AUTO-GENERATED by Vox @form emit.
import React from 'react';

export function Item() {
  const [name, set_name] = React.useState("");
  const [errors, setErrors] = React.useState<Record<string, string>>({});
  const [submitting, setSubmitting] = React.useState(false);
  const [bannerError, setBannerError] = React.useState<string | null>(null);
  function validate(): Record<string, string> {
    const e: Record<string, string> = {};
    if (name === undefined || name === null || name === "") e.name = "name is required";
    return e;
  }
  const onSubmit = async (ev: React.FormEvent) => {
    ev.preventDefault();
    const errs = validate();
    setErrors(errs);
    if (Object.keys(errs).length > 0) return;
    setSubmitting(true);
    setBannerError(null);
    try {
      await submit_item(name);
    } catch (err) {
      setBannerError(String(err));
    } finally {
      setSubmitting(false);
    }
  };
  return (
    <form onSubmit={onSubmit} className="vox-form">
      {bannerError && <div role="alert" className="vox-form-error-banner">{bannerError}</div>}
      <label className="vox-form-field">
        <span>name *</span>
        <input type="text" value={name ?? ""} onChange={e => set_name(e.target.value)} aria-invalid={!!errors.name} aria-describedby="name-error" />
        {errors.name && <span id="name-error" role="alert" className="vox-form-error">{errors.name}</span>}
      </label>
      <button type="submit" disabled={submitting}>{submitting ? "Saving…" : "Submit"}</button>
    </form>
  );
}


=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [],
  "mutation_fns": [
    {
      "name": "submit_item",
      "route_path": "/api/mutation/submit_item",
      "signature": "fn(name: str) -> int",
      "wraps_db_transaction": false
    }
  ],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== vox-client.ts ===
// Generated by Vox — typed fetch client for @query / @mutation / @server
// Transport: GET + JSON query values for @query; POST + JSON body for @mutation / @server.
// Do not edit; regenerate with `vox build`.

import { z } from "zod";
export class VoxApiError extends Error {
  constructor(public readonly status: number, public readonly path: string, public readonly responseText: string) {
    super(`${path} failed: ${status}${responseText ? ` — ${responseText.slice(0, 200)}` : ""}`);
    this.name = "VoxApiError";
  }
}

const BASE = ((import.meta as unknown as { env?: { VITE_API_URL?: string } }).env?.VITE_API_URL ?? "");

/** Build `?a=<json>&b=<json>` with keys sorted lexicographically (matches Axum BTreeMap decode). */
function voxQueryString(query: Record<string, unknown>): string {
  const keys = Object.keys(query).sort();
  if (keys.length === 0) return "";
  const parts = keys.map(
    (k) => `${encodeURIComponent(k)}=${encodeURIComponent(JSON.stringify(query[k]))}`,
  );
  return `?${parts.join("&")}`;
}

async function $get<T>(path: string, schema?: { parse: (x: any) => T }, query?: Record<string, unknown>, init?: RequestInit): Promise<T> {
  const url = BASE ? `${BASE}${path}` : path;
  const qs = query && Object.keys(query).length > 0 ? voxQueryString(query) : "";
  const r = await fetch(`${url}${qs}`, { method: "GET", ...init });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t);
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

async function $post<T>(path: string, schema?: { parse: (x: any) => T }, body?: unknown, init?: RequestInit): Promise<T> {
  const url = BASE ? `${BASE}${path}` : path;
  const r = await fetch(url, {
    method: "POST",
    headers: { "Content-Type": "application/json" },
    body: JSON.stringify(body ?? {}),
    ...init,
  });
  if (!r.ok) {
    const t = await r.text().catch(() => "");
    throw new VoxApiError(r.status, path, t);
  }
  const data = await r.json();
  return schema ? schema.parse(data) : (data as T);
}

/** Server fn `submit_item` → `/api/mutation/submit_item` (POST) */
export async function submit_item(args: { name: string }, init?: RequestInit): Promise<number> {
  return $post<number>("/api/mutation/submit_item", z.number(), { name: args.name }, init);
}



=== openapi.json ===
{
  "components": {
    "schemas": {}
  },
  "info": {
    "description": "Generated from Vox source. Conforms to wire-format-v1.",
    "title": "vox-app",
    "version": "0.1.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/mutation/submit_item": {
      "post": {
        "operationId": "submit_item",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ],
                "type": "object"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "number"
                }
              }
            },
            "description": "Success"
          }
        },
        "summary": "POST /api/mutation/submit_item"
      }
    }
  },
  "servers": [
    {
      "url": "/api/v1"
    }
  ]
}
