crates/vox-codegen/tests/snapshots/golden_ts_test__golden_ts_emit@list_render_with_key.snap
---
source: crates/vox-codegen/tests/golden_ts_test.rs
assertion_line: 28
expression: combined
---
=== ItemList.tsx ===
import React from "react";

export interface ItemListProps {
  items: any;
}

export function ItemList({ items }: ItemListProps): React.ReactElement {
  return (
    <div className={["flex", "flex-col"].filter(Boolean).join(" ")}>
      {items.map((item: any, i: number) => (<div className={["bg-background", "rounded-lg", "border", "border-border", "p-4"].filter(Boolean).join(" ")}
     key={item.id}>
      <p className={"text-base"}
    >
      {item.name}
    </p>
    </div>))}
    </div>
  );
}


=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [],
  "mutation_fns": [],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}
